--- a/blog-website/src/components/SelectedBlog.css
+++ b/blog-website/src/components/SelectedBlog.css
@@ -55,10 +55,10 @@ body{
     padding-bottom: 30px;
     size: 30px;
 }
-button{
+/* button{
     font-size: 30px;
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 1);
     background-color: rgb(220, 220, 220);
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
