blogpost page complete

--- a/blog-website/src/components/HeadingOfBlogs.css
+++ b/blog-website/src/components/HeadingOfBlogs.css
@@ -17,6 +17,7 @@ body{
     background: rgb(229, 229, 229);
     font-family: Arial;
     margin-bottom: 30px ;
+    text-align: center;
 }
 
 /* thin line after sub heading */
