--- a/blog-website/src/components/SelectedBlog.css
+++ b/blog-website/src/components/SelectedBlog.css
@@ -38,6 +38,10 @@
     color: rgb(34, 39, 66);
     font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.blog-description{
+    font-size: 20px;
+    color: rgb(46, 50, 69);
+}
 
 .blog-author1-date1{
     font-size: 20px;
@@ -49,7 +53,7 @@
     color: rgb(87, 87, 87);
 }
 
-.blog-content1 p{
+.blog-content1 {
     font-size: 20px;
     font-family: medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
